# cover-letter-genie

./: .gitignore  README.md  package-lock.json  package.json  schema.md  tsconfig.json  tsconfigasdf.json  webpack.config.js
backend/: README.md  new_marker.py  pyproject.toml
backend/src/: docs.py  word.py
backend/utils/: constants.py  marker_utils.py
extension/: background.js  content.js
frontend/: package-lock.json  package.json  sample-posting.html  tsconfig.json
frontend/public/: onboarding.html  popup.css
frontend/src/: Popup.tsx  background.js  manifest.json  parser.js
public/: background.js  coopPosting.js  index.html  manifest.json  popup.html
src/: App.css  App.js  App.tsx  Onboarding.tsx  background.js  content.js  coopPosting.js  coopPosting.ts  firebase.js  formatted-isolated.html  manifest.json  parser.js  parser.ts  schema.md  store.js
